# DrTate

./: CMakeLists.txt  README.md  settings.ini
assets/: README.md
includes/: README.md
includes/common/: config.h.in  config.hxx
includes/core/: core.hxx  core.hxx.in
includes/global/: global.hxx  global.hxx.in
includes/resource_manager/: resource_manager.hxx
includes/scene_manager/: scene_manager.hxx  scene_manager.hxx.in  scenes_list.hxx  scenes_list.hxx.in
includes/scenes/: scene.hxx  scene.hxx.in
includes/scenes/main_menu/: main_menu.hxx  main_menu.hxx.in
includes/scenes/settings_menu/: settings_menu.hxx
sources/: README.md
sources/core/: core_init.cxx  core_run.cxx
sources/global/: global_font.cxx  global_scene_manager.cxx  global_settings.cxx  global_window.cxx
sources/main/: README.md  main.cxx  main.hxx  main.hxx.in
sources/resource_manager/: resource_manager.cxx
sources/scene_manager/: scene_manager_init.cxx
sources/scenes/main_menu/: exit.cxx  init.cxx  update_simulation.cxx
sources/scenes/main_menu/inputs/: keyboard.cxx  mouse.cxx
sources/scenes/main_menu/outputs/: audio.cxx  graphics.cxx
sources/scenes/settings_menu/: exit.cxx  init.cxx  update_simulation.cxx
sources/scenes/settings_menu/inputs/: keyboard.cxx  mouse.cxx
sources/scenes/settings_menu/outputs/: audio.cxx  graphics.cxx
